--- a/client/src/components/Weather.css
+++ b/client/src/components/Weather.css
@@ -1,40 +1,54 @@
+/* Weather.css */
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
-body {
-    background: rgb(74,144,226);
-}
-.container{
+  }
+  
+  .container {
     width: 500px;
     height: 800px;
-    background-color: rgb(255,255,255,0.75);
+    background-color: rgba(255, 255, 255, 0.75);
     border-radius: 12px;
     margin: auto;
     margin-top: 75px;
-}
-.city{
+    transition: background-color 0.5s ease, color 0.5s ease;
+  }
+  
+  .app.dark-mode .container {
+    background-color: rgba(50, 50, 50, 0.75);
+    color: white;
+  }
+  
+  .city {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap:15px;
+    gap: 15px;
     padding-top: 50px;
-}
-.city input{
+  }
+  
+  .city input {
     display: flex;
-    width:270px;
+    width: 270px;
     height: 60px;
     border: none;
     outline: none;
-    font-weight: 500px;
-    padding-left:20px;
+    font-weight: 500;
+    padding-left: 20px;
     border-radius: 40px;
     font-size: 15px;
     color: #1c1c1c;
-    box-shadow: 7px 4px 15px 0px rgba(0,0,0,0.34);
-}
-.city button{
+    box-shadow: 7px 4px 15px 0px rgba(0, 0, 0, 0.34);
+  }
+  
+  .app.dark-mode .city input {
+    background-color: #555;
+    color: white;
+  }
+  
+  .city button {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -44,56 +58,65 @@ body {
     height: 60px;
     border-radius: 50%;
     font-size: 18px;
-    outline:none;
-    border-radius: 50%;
-    outline:none;
-    border:none;
+    outline: none;
+    border: none;
     cursor: pointer;
-    box-shadow: 7px 4px 15px 0px rgb(0,0,0,0.34);
-}
-
-.error-message{
+    box-shadow: 7px 4px 15px 0px rgb(0, 0, 0, 0.34);
+  }
+  
+  .app.dark-mode .city button {
+    background-color: #555;
+    color: white;
+  }
+  
+  .error-message {
     color: red;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top:50px;
+    margin-top: 50px;
     font-size: 20px;
     font-weight: 600;
-    /* color: #1c1c1c; */
-}
-
-.content{
+  }
+  
+  .content {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    /* gap: 20px; */
-}
-.weather-image{
+  }
+  
+  .weather-image {
     text-transform: capitalize;
     color: #1c1c1c;
-
-}
-.weather-image img {
+  }
+  
+  .app.dark-mode .weather-image {
+    color: white;
+  }
+  
+  .weather-image img {
     width: 100%;
     height: 100%;
     margin: 10px auto 0 auto;
-}
-.weather-image .desc{
+  }
+  
+  .weather-image .desc {
     font-size: 30px;
     font-weight: 600;
     margin-top: 0px;
     text-align: center;
     margin-bottom: 5px;
-}
-.weather-temp{
+  }
+  
+  .weather-temp {
     color: #40a2e3;
     text-align: center;
     font-size: 50px;
     margin: 25px auto 15px auto;
-}
-.weather-city{
+  }
+  
+  .weather-city {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -102,68 +125,83 @@ body {
     font-weight: 500;
     font-size: 35px;
     margin-bottom: 15px;
-}
-.weather-city .location {
-    color: #40A2E3;
+  }
+  
+  .app.dark-mode .weather-city {
+    color: white;
+  }
+  
+  .weather-city .location {
+    color: #40a2e3;
     margin-top: 8px;
     font-size: 30px;
     padding-right: 5px;
-}
-.weather-stats {
+  }
+  
+  .weather-stats {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     gap: 60px;
     margin-top: 50px;
-}
-.weather-stats .wind{
-    background-color: #40A2E3;
+  }
+  
+  .weather-stats .wind {
+    background-color: #40a2e3;
     width: 180px;
     height: 150px;
     border-radius: 15px;
-    box-shadow: 4px 3px 10px 0px rgba(0,0,0,0.34);
+    box-shadow: 4px 3px 10px 0px rgba(0, 0, 0, 0.34);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-.weather-stats .humidity{
-    background-color: #40A2E3;
+  }
+  
+  .weather-stats .humidity {
+    background-color: #40a2e3;
     width: 180px;
     height: 150px;
     border-radius: 15px;
-    box-shadow: 4px 3px 10px 0px rgba(0,0,0,0.34);
+    box-shadow: 4px 3px 10px 0px rgba(0, 0, 0, 0.34);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-.weather-stats .wind-icon {
+  }
+  
+  .weather-stats .wind-icon {
     color: #fff;
     font-size: 50px;
-}
-.weather-stats .humidity-icon {
+  }
+  
+  .weather-stats .humidity-icon {
     color: #fff;
     font-size: 60px;
     margin-top: -10px;
-}
-.weather-stats .wind-speed {
+  }
+  
+  .weather-stats .wind-speed {
     color: #fff;
     margin-top: 0;
     font-weight: 700;
-}
-.weather-stats .humidity-percent {
+  }
+  
+  .weather-stats .humidity-percent {
     color: #fff;
     margin-top: -11px;
     font-weight: 700;
-}
-.weather-stats .wind-heading {
+  }
+  
+  .weather-stats .wind-heading {
     color: #fff;
     text-transform: uppercase;
     font-size: 23px;
-}
-.weather-stats .humidity-heading {
+  }
+  
+  .weather-stats .humidity-heading {
     color: #fff;
     text-transform: uppercase;
     font-size: 23px;
-}
+  }
+  
