--- a/client/src/components/Weather.css
+++ b/client/src/components/Weather.css
@@ -8,11 +8,11 @@
   
   .container {
     width: 500px;
-    height: 800px;
+    height: 820px;
     background-color: rgba(255, 255, 255, 0.75);
     border-radius: 12px;
     margin: auto;
-    margin-top: 75px;
+    margin-top: 20px;
     transition: background-color 0.5s ease, color 0.5s ease;
   }
   
@@ -204,4 +204,6 @@
     text-transform: uppercase;
     font-size: 23px;
   }
-  
+  .date-time{
+    margin-top: 10px;
+  }
